4ano/2semestre/SRC/project/resumo_iptables/dmz_iptables.txt

:INPUT ACCEPT [2733:208268]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3008:236500]

:FROM-CORE-LOWER-TO-DMZ - [0:0]
:FROM-CORE-UPPER-TO-DMZ - [0:0]
:FROM-DMZ-TO-CORE-LOWER - [0:0]
:FROM-DMZ-TO-CORE-UPPER - [0:0]
:FROM-LOWER-TO-UPPER - [0:0]
:FROM-UPPER-TO-LOWER - [0:0]

:ZONE-CORE-LOWER - [0:0]
:ZONE-CORE-UPPER - [0:0]
:ZONE-DMZ - [0:0]

-A FORWARD -o eth0 -j ZONE-CORE-UPPER
-A FORWARD -o eth1 -j ZONE-CORE-UPPER
-A FORWARD -o eth3 -j ZONE-CORE-LOWER
-A FORWARD -o eth4 -j ZONE-CORE-LOWER
-A FORWARD -o eth5 -j ZONE-DMZ

#Acita CORE <-> DMZ já estabelecida
-A FROM-CORE-LOWER-TO-DMZ -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -m state --state RELATED,ESTABLISHED -j ACCEPT

-A FROM-DMZ-TO-CORE-LOWER -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-DMZ-TO-CORE-UPPER -m state --state RELATED,ESTABLISHED -j ACCEPT


# LOWER -> Upper Tudo ::::: Upper -> Lower já estabelecido
-A FROM-LOWER-TO-UPPER -j ACCEPT
-A FROM-UPPER-TO-LOWER -m state --state RELATED,ESTABLISHED -j ACCEPT



# LOWER -> Web services e DNS e Email
-A FROM-CORE-LOWER-TO-DMZ -p tcp -m tcp --dport 443 -j ACCEPT
-A FROM-CORE-LOWER-TO-DMZ -p udp -m udp --dport 443 -j ACCEPT

-A FROM-CORE-LOWER-TO-DMZ -p udp -m udp --dport 53 -j ACCEPT
-A FROM-CORE-LOWER-TO-DMZ -p tcp -m tcp --dport 53 -j ACCEPT

-A FROM-CORE-LOWER-TO-DMZ -p tcp -m tcp --dport 993 -j ACCEPT
-A FROM-CORE-LOWER-TO-DMZ -p tcp -m tcp --dport 25 -j ACCEPT


# Ping e SSH do de Gestão
-A FROM-CORE-LOWER-TO-DMZ -s 10.1.0.50/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FROM-CORE-LOWER-TO-DMZ -s 10.1.0.50/32 -p tcp -m tcp --dport 22 -j ACCEPT


# Core UPPER para DMZ
-A FROM-CORE-UPPER-TO-DMZ -p tcp -m tcp --dport 443 -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -p udp -m udp --dport 443 -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -p tcp -m tcp --dport 993 -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -p tcp -m tcp --dport 25 -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -p udp -m udp --dport 53 -j ACCEPT
-A FROM-CORE-UPPER-TO-DMZ -p tcp -m tcp --dport 53 -j ACCEPT





-A ZONE-CORE-LOWER -i eth5 -j FROM-DMZ-TO-CORE-LOWER
-A ZONE-CORE-LOWER -i eth0 -j FROM-UPPER-TO-LOWER
-A ZONE-CORE-LOWER -i eth1 -j FROM-UPPER-TO-LOWER
-A ZONE-CORE-UPPER -i eth5 -j FROM-DMZ-TO-CORE-UPPER
-A ZONE-CORE-UPPER -i eth3 -j FROM-LOWER-TO-UPPER
-A ZONE-CORE-UPPER -i eth4 -j FROM-LOWER-TO-UPPER

-A ZONE-DMZ -i eth0 -j FROM-CORE-UPPER-TO-DMZ
-A ZONE-DMZ -i eth1 -j FROM-CORE-UPPER-TO-DMZ
-A ZONE-DMZ -i eth3 -j FROM-CORE-LOWER-TO-DMZ
-A ZONE-DMZ -i eth4 -j FROM-CORE-LOWER-TO-DMZ
