4ano/2semestre/SRC/project/resumo_iptables/vlans_iptables.txt

:INPUT ACCEPT [8000:424332]
:FORWARD DROP [36:3024]
:OUTPUT ACCEPT [25242:1111576]

:FROM-CORE-TO-VLAN1 - [0:0]
:FROM-CORE-TO-VLAN10 - [0:0]
:FROM-CORE-TO-VLAN20 - [0:0]
:FROM-VLAN1-TO-CORE - [0:0]
:FROM-VLAN1-TO-VLAN10 - [0:0]
:FROM-VLAN1-TO-VLAN20 - [0:0]
:FROM-VLAN10-TO-CORE - [0:0]
:FROM-VLAN10-TO-VLAN1 - [0:0]
:FROM-VLAN10-TO-VLAN20 - [0:0]
:FROM-VLAN20-TO-CORE - [0:0]
:FROM-VLAN20-TO-VLAN1 - [0:0]
:FROM-VLAN20-TO-VLAN10 - [0:0]

:ZONE-CORE - [0:0]
:ZONE-VLAN1 - [0:0]
:ZONE-VLAN10 - [0:0]
:ZONE-VLAN20 - [0:0]

-A FORWARD -o eth0.1 -j ZONE-VLAN1
-A FORWARD -o eth0.10 -j ZONE-VLAN10
-A FORWARD -o eth0.20 -j ZONE-VLAN20
-A FORWARD -o eth2 -j ZONE-CORE
-A FORWARD -o eth3 -j ZONE-CORE

# O que vem do CORE só passa se já estiver estabelecida
-A FROM-CORE-TO-VLAN1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-CORE-TO-VLAN10 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-CORE-TO-VLAN20 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-VLAN1-TO-CORE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-VLAN10-TO-CORE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-VLAN20-TO-CORE -m state --state RELATED,ESTABLISHED -j ACCEPT


# VLAN1 para a Internet
-A FROM-VLAN1-TO-CORE -p tcp -m tcp --dport 80 -j ACCEPT
-A FROM-VLAN1-TO-CORE -p tcp -m tcp --dport 443 -j ACCEPT
-A FROM-VLAN1-TO-CORE -p udp -m udp --dport 80 -j ACCEPT
-A FROM-VLAN1-TO-CORE -p udp -m udp --dport 443 -j ACCEPT

# PC Gestão ping e ssh para CORE
-A FROM-VLAN1-TO-CORE -s 10.1.0.50/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FROM-VLAN1-TO-CORE -s 10.1.0.50/32 -p tcp -m tcp --dport 22 -j ACCEPT

# VLAN1 para DMZ - EMAIL e DNS
-A FROM-VLAN1-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 993 -j ACCEPT
-A FROM-VLAN1-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 25 -j ACCEPT
-A FROM-VLAN1-TO-CORE -d 200.0.0.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FROM-VLAN1-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 53 -j ACCEPT ##########


# VLAN10 para DMZ - EMAIL e DNS
-A FROM-VLAN10-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 993 -j ACCEPT
-A FROM-VLAN10-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 25 -j ACCEPT
-A FROM-VLAN10-TO-CORE -d 200.0.0.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FROM-VLAN10-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 53 -j ACCEPT ###########

# VLAN20 para DMZ - EMAIL e DNS
-A FROM-VLAN20-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 993 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 25 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 200.0.0.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 200.0.0.0/24 -p tcp -m tcp --dport 53 -j ACCEPT ########

# PC Gestão ping e ssh para VLAN10
-A FROM-VLAN1-TO-VLAN10 -s 10.1.0.50/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FROM-VLAN1-TO-VLAN10 -s 10.1.0.50/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FROM-VLAN1-TO-VLAN10 -m state --state RELATED,ESTABLISHED -j ACCEPT #######

-A FROM-VLAN10-TO-VLAN1 -m state --state RELATED,ESTABLISHED -j ACCEPT

# PC Gestão ping e ssh para VLAN20
-A FROM-VLAN1-TO-VLAN20 -s 10.1.0.50/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FROM-VLAN1-TO-VLAN20 -s 10.1.0.50/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FROM-VLAN1-TO-VLAN20 -m state --state RELATED,ESTABLISHED -j ACCEPT ########

A FROM-VLAN20-TO-VLAN1 -m state --state RELATED,ESTABLISHED -j ACCEPT

# VLAN10 para INTERNET
-A FROM-VLAN10-TO-CORE -p tcp -m tcp --dport 80 -j ACCEPT
-A FROM-VLAN10-TO-CORE -p tcp -m tcp --dport 443 -j ACCEPT
-A FROM-VLAN10-TO-CORE -p udp -m udp --dport 80 -j ACCEPT
-A FROM-VLAN10-TO-CORE -p udp -m udp --dport 443 -j ACCEPT

# VLAN20 para a Internet
-A FROM-VLAN20-TO-CORE -p tcp -m tcp --dport 80 -j ACCEPT
-A FROM-VLAN20-TO-CORE -p tcp -m tcp --dport 443 -j ACCEPT
-A FROM-VLAN20-TO-CORE -p udp -m udp --dport 80 -j ACCEPT
-A FROM-VLAN20-TO-CORE -p udp -m udp --dport 443 -j ACCEPT

# VLAN10 para VOIP para os ips especificos
-A FROM-VLAN10-TO-CORE -d 100.0.0.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A FROM-VLAN10-TO-CORE -d 100.0.0.11/32 -p udp -m udp --dport 5060 -j ACCEPT

# DA VLAN10 para o Datacenter - Internal DNS
-A FROM-VLAN10-TO-CORE -d 10.100.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A FROM-VLAN10-TO-CORE -d 10.100.0.0/16 -p tcp -m tcp --dport 53 -j ACCEPT


# VLAN20 para DATACENTER - DNS e Database(só 20)
-A FROM-VLAN20-TO-CORE -d 10.100.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 10.100.0.0/16 -p tcp -m tcp --dport 53 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 10.100.0.0/16 -p udp -m udp --dport 3306 -j ACCEPT
-A FROM-VLAN20-TO-CORE -d 10.100.0.0/16 -p tcp -m tcp --dport 3306 -j ACCEPT


# Samba VLAN10-VLAN20
-A FROM-VLAN10-TO-VLAN20 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-VLAN10-TO-VLAN20 -p tcp -m tcp --dport 139 -j ACCEPT
-A FROM-VLAN10-TO-VLAN20 -p tcp -m tcp --dport 445 -j ACCEPT


# Samba VLAN20-10
-A FROM-VLAN20-TO-VLAN10 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FROM-VLAN20-TO-VLAN10 -p tcp -m tcp --dport 139 -j ACCEPT
-A FROM-VLAN20-TO-VLAN10 -p tcp -m tcp --dport 445 -j ACCEPT

# Associação Zona(saida) - Int(veio) - Chain
-A ZONE-CORE -i eth0.1 -j FROM-VLAN1-TO-CORE
-A ZONE-CORE -i eth0.10 -j FROM-VLAN10-TO-CORE
-A ZONE-CORE -i eth0.20 -j FROM-VLAN20-TO-CORE
-A ZONE-VLAN1 -i eth2 -j FROM-CORE-TO-VLAN1
-A ZONE-VLAN1 -i eth3 -j FROM-CORE-TO-VLAN1
-A ZONE-VLAN1 -i eth0.20 -j FROM-VLAN20-TO-VLAN1
-A ZONE-VLAN1 -i eth0.10 -j FROM-VLAN10-TO-VLAN1
-A ZONE-VLAN10 -i eth2 -j FROM-CORE-TO-VLAN10
-A ZONE-VLAN10 -i eth3 -j FROM-CORE-TO-VLAN10
-A ZONE-VLAN10 -i eth0.20 -j FROM-VLAN20-TO-VLAN10
-A ZONE-VLAN10 -i eth0.1 -j FROM-VLAN1-TO-VLAN10
-A ZONE-VLAN20 -i eth2 -j FROM-CORE-TO-VLAN20
-A ZONE-VLAN20 -i eth3 -j FROM-CORE-TO-VLAN20
-A ZONE-VLAN20 -i eth0.10 -j FROM-VLAN10-TO-VLAN20
-A ZONE-VLAN20 -i eth0.1 -j FROM-VLAN1-TO-VLAN20
